// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedRecipesContainer matches the snapshot when there are no superSavedRecipes 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedRecipesContainer
    addSavedRecipes={[Function]}
    authUser={
        Object {
            "uid": 666,
          }
    }
    saveRecipe={[Function]}
    savedRecipeIDs={
        Array [
            "123",
            "456",
          ]
    }
    savedRecipesFull={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": "p",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": "p",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SavedRecipesContainer should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedRecipesContainer
    addSavedRecipes={[Function]}
    authUser={
        Object {
            "uid": 666,
          }
    }
    saveRecipe={[Function]}
    savedRecipeIDs={
        Array [
            "123",
            "456",
          ]
    }
    savedRecipesFull={
        Array [
            Object {
              "title": "tired",
            },
            Object {
              "title": "bedtime",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="home-btn"
          exact={true}
          replace={false}
          to="/"
>
          Home
</Link>,
        Array [
          <SavedRecipeCard
            authUser={
                        Object {
                                    "uid": 666,
                                  }
            }
            title="tired"
/>,
          <SavedRecipeCard
            authUser={
                        Object {
                                    "uid": 666,
                                  }
            }
            title="bedtime"
/>,
        ],
      ],
      "className": "saved-recipes-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Home",
          "className": "home-btn",
          "exact": true,
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": "Home",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "authUser": Object {
            "uid": 666,
          },
          "title": "tired",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "authUser": Object {
            "uid": 666,
          },
          "title": "bedtime",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="home-btn"
            exact={true}
            replace={false}
            to="/"
>
            Home
</Link>,
          Array [
            <SavedRecipeCard
              authUser={
                            Object {
                                          "uid": 666,
                                        }
              }
              title="tired"
/>,
            <SavedRecipeCard
              authUser={
                            Object {
                                          "uid": 666,
                                        }
              }
              title="bedtime"
/>,
          ],
        ],
        "className": "saved-recipes-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Home",
            "className": "home-btn",
            "exact": true,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "Home",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "authUser": Object {
              "uid": 666,
            },
            "title": "tired",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "authUser": Object {
              "uid": 666,
            },
            "title": "bedtime",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
